--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,13 @@
             </div>
             <div class="four wide computer only column">
               <p id="ha-contact">999-999-9999</p>
+              <div id="auth-buttons" >
+                <button id="sign-in-button" class="ui button" >Sign In</button>
+                <button id="register-button" class="ui button">Register</button>
+              </div>
+              <div id="logout-div" >
+                <button id="logout-button" class="ui button" >Logout</button>
+              </div>
             </div>
           </div>
           <div class="row" id="landing-search-row">
