add listing form started

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -101,8 +101,7 @@
           <div data-tab="home" class="ui right attached active tab item tab-div">
             <p>home</p>
           </div>
-          <div data-tab="listings" class="ui right attached tab item tab-div">
-            <p>listings</p>
+          <div data-tab="listings" id="listings-div" class="ui right attached tab item tab-div">
             </div>
             <div data-tab="profile" class="ui right attached tab item tab-div">
                 <p>profile</p>
