--- a/public/form-pages/form.1.html
+++ b/public/form-pages/form.1.html
@@ -26,81 +26,167 @@
 
 <body>
     <div class="nav-bar">
-            <p class="nav-h1" style="font-size: 20px; margin: 0px;"  >The International Hair Authority Directory</p>
-            <div id="home-button" ><i class="home icon"></i>Home</div>
-    </div> 
-        <div id="form-page-container">
-            <form id="form-1" class="ui equal width form">
-                <h1 class="form-h1" >International Authority Directory</h1>
-                <h3 class="form-h3" >Let's get started... </h3>
+        <p class="nav-h1" style="font-size: 20px; margin: 0px;">The International Hair Authority Directory</p>
+        <div id="home-button"><i class="home icon"></i>Home</div>
+    </div>
+    <div id="form-page-container">
+        <form id="form-1" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Let's get started... </h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">What's the name of your business?</label>
+                <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="businessTitle" type="text" placeholder="Ex. Google">
+                    <i class="building outline icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Give a quick description of what you do</label>
+                <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="businessDescription" type="text"
+                        placeholder="Ex. At the Hair Authority Directory we...">
+                    <i class="edit icon"></i>
+                </div style="margin-top: 2rem;">
+            </div>
+            <div id="submit1" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+        <form id="form-2" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Do You Have an Address? </h3>
+            <div class="fields">
                 <div class="field">
-                    <label style="margin-top: 2rem;" id="labels-1" >What's the name of your business?</label>
+                    <label id="labels-1">Street Address</label>
                     <div style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input name="businessTitle" type="text" placeholder="Ex. Google">
-                        <i class="building outline icon"></i>
-                      </div>
+                        <input name="streetAddress" type="text" placeholder="Ex. 9999 Silva Rd.">
+                        <i class="map signs icon"></i>
+                    </div>
                 </div>
                 <div class="field">
-                    <label style="margin-top: 2rem;" id="labels-1" >Give a quick description of what you do</label>
+                    <label id="labels-1">City</label>
                     <div style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input name="businessDescription" type="text" placeholder="Ex. At the Hair Authority Directory we...">
-                        <i class="edit icon"></i>
-                      </div style="margin-top: 2rem;">
+                        <input name="city" type="text" placeholder="Ex. Los Angeles">
+                        <i class="city icon"></i>
+                    </div style="margin-top: 2rem;">
                 </div>
-                <buttonn id="submit" style="background: rgba(39, 76, 119, 1); color: white;" class="ui large button" >Next <i class="right arrow icon"></i></buttonn>
-            </form>
-            <form id="form-2" class="ui equal width form">
-                <h1 class="form-h1" >International Authority Directory</h1>
-                <h3 class="form-h3" >Do You Have an Address? </h3>
-                <div class="fields">
-                    <div class="field">
-                        <label id="labels-1" >Street Address</label>
-                        <div style="margin-top: 1rem;" class="ui transparent left icon input">
-                            <input name="streetAddress" type="text" placeholder="Ex. Google">
-                            <i class="building outline icon"></i>
-                          </div>
-                    </div>
-                    <div class="field">
-                        <label id="labels-1" >City</label>
-                        <div style="margin-top: 1rem;" class="ui transparent left icon input">
-                            <input name="city" type="text" placeholder="Ex. At the Hair Authority Directory we...">
-                            <i class="edit icon"></i>
-                          </div style="margin-top: 2rem;">
+            </div>
+            <div class="fields">
+                <div class="field">
+                    <label id="labels-1">State</label>
+                    <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                        <select id="state" name="state" class="ui search dropdown">
+                            <option value="">State</option>
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="DC">District Of Columbia</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
+                            <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
+                          </select>
                     </div>
                 </div>
-                <div class="fields">
-                    <div class="field">
-                        <label id="labels-1" >State</label>
-                        <div style="margin-top: 1rem;" class="ui transparent left icon input">
-                            <input name="state" type="text" placeholder="Ex. Google">
-                            <i class="building outline icon"></i>
-                          </div>
-                    </div>
-                    <div class="field">
-                        <label id="labels-1" >Zip</label>
-                        <div style="margin-top: 1rem;" class="ui transparent left icon input">
-                            <input name="zip" type="text" placeholder="Ex. At the Hair Authority Directory we...">
-                            <i class="edit icon"></i>
-                          </div style="margin-top: 2rem;">
-                    </div>
+                <div class="field">
+                    <label id="labels-1">Zip</label>
+                    <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                        <input name="zip" type="text" placeholder="Ex. 99999">
+                        <i class="hashtag icon"></i>
+                    </div style="margin-top: 2rem;">
                 </div>
-                
-                <buttonn id="submit" style="background: rgba(39, 76, 119, 1); color: white;" class="ui large button" >Next <i class="right arrow icon"></i></buttonn>
-            </form>
-            <div id="footer" class="ui large breadcrumb">
-                <div class="section">Home</div>
-                <i class="right chevron icon divider"></i>
-                <div class="section">Registration</div>
-                <i class="right chevron icon divider"></i>
-                <div class="active section">Personal Information</div>
-                <i class="right chevron icon divider"></i>
-                <div class="section">Home</div>
-                <i class="right chevron icon divider"></i>
-                <div class="section">Registration</div>
-                <i class="right chevron icon divider"></i>
-                <div class="section">Personal Information</div>
-              </div>
+            </div>
+            <h3 class="form-h3" >Store Hours</h3>
+            <div id='opening-hours-field' class="fields"></div>
+            <div id='closing-hours-field' class="fields"></div>
+            <a id="submit2">
+                <div  class="submit-button">Next <i class="right arrow icon"></i></div>
+            </a>
+            <p style="float: right;" >Don't have an address? <a>Skip </a></p>
+        </form>
+
+        <!-- form 3 -->
+        <form id="form-3" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Let's get started... </h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">What's the name of your business?</label>
+                <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="businessTitle" type="text" placeholder="Ex. Google">
+                    <i class="building outline icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Give a quick description of what you do</label>
+                <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="businessDescription" type="text"
+                        placeholder="Ex. At the Hair Authority Directory we...">
+                    <i class="edit icon"></i>
+                </div style="margin-top: 2rem;">
+            </div>
+            <div id="submit3" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+
+
+
+        <!-- footer  -->
+        <div id="footer" class="ui large breadcrumb">
+            <div id="businessTitle" class="section bread">Business Title</div>
+            <i class="right chevron icon divider"></i>
+            <div id="storefrontInfo" class="section bread">Storefront Info</div>
+            <i class="right chevron icon divider"></i>
+            <div id="website" class="section bread">Website</div>
+            <i class="right chevron icon divider"></i>
+            <div id="smContact" class="section bread">Social Media & Contact</div>
+            <i class="right chevron icon divider"></i>
+            <div id="about" class="section bread">About your Business</div>
+            <i class="right chevron icon divider"></i>
+            <div id="images" class="section bread">Images & Media</div>
+            <i class="right chevron icon divider"></i>
+            <div id="faq" class="section bread">FAQs</div>
         </div>
+    </div>
     <script src="../js/form.pages/form.pages.1.js"></script>
 </body>
 
