--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>International Hair Authority</title>
+    <!-- You MUST include jQuery before Fomantic -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css"
@@ -18,72 +20,271 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
 
-    <link rel="stylesheet" type="text/css" href="./css/listing.form.css" />
+    <link rel="stylesheet" type="text/css" href="./css/dashboard.css" />
+    <link rel="stylesheet" href="./css/form.pages.css" />
 </head>
 
 <body>
-    <div id="form-container">
-        <h1>Make a listing</h1>
-        <form class="ui equal width form" id="listings">
-            <div class="field">
-                <label>Business Title</label>
-                <input type="text" placeholder="Business Title" name="businessTitle">
-            </div>
-            <div class="field">
-                <label>Business Subtitle</label>
-                <input type="text" placeholder="Business Subtitle" name="businessSubtitle">
-            </div>
-            <div class="fields">
-                <div class="field">
-                    <label>Street Address</label>
-                    <input type="text" placeholder="Street Address" name="streetAddress">
-                </div>
-                <div class="field">
-                    <label>City</label>
-                    <input type="text" placeholder="City" name="city">
-                </div>
-            </div>
-            <div class="fields">
-                <div class="field">
-                    <label>State</label>
-                    <input type="text" placeholder="State" name="state">
-                </div>
-                <div class="field">
-                    <label>Zip</label>
-                    <input type="text" placeholder="Zip" name="zip">
-                </div>
-            </div>
-            <div id='opening-hours-field' class="fields"></div>
-            <div id='closing-hours-field' class="fields"></div>
-            <div class="field">
-                <label>Website</label>
-                <input type="text" name="website" placeholder="www.example.com">
-            </div>
-            <div id="category-field" class="field"></div>
-            <div class="fields">
-                <div class="field">
-                    <label>Phone</label>
-                    <input type='number' name="phone" placeholder="999-999-9999">
-                </div>
-                <div class="field">
-                    <label>Email</label>
-                    <input name='email' type="email" placeholder="example@example.com">
-                </div>
-            </div>
-            <div id="social-media"></div>
-            <div id="faq-section">
-                <label>FAQs</label>
-                <i id="add-faq" class="large plus circle icon"></i>
-            </div>
-            <div class="field">
-                <label>Extra Info</label>
-                <textarea id="extra-info" name='extraInfo'></textarea>
-            </div>
-            <button id="listing-submit" class="ui button" >Submit</button>
-        </form>
+    <div class="nav-bar">
+        <p class="nav-h1" style="font-size: 20px; margin: 0px;">The International Hair Authority Directory</p>
+        <div id="home-button"><i class="home icon"></i>Home</div>
     </div>
+    <div id="form-page-container">
+        <form id="form-1" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Let's get started... </h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">What's the name of your business?</label>
+                <div id="businessTitle-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="businessTitle" type="text" placeholder="Ex. Google">
+                    <i class="building outline icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Give a quick description of what you do</label>
+                <div id="businessDescription-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="businessDescription" type="text"
+                        placeholder="Ex. At the Hair Authority Directory we...">
+                    <i class="edit icon"></i>
+                </div style="margin-top: 2rem;">
+            </div>
+            <div id="submit1" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+        <form id="form-2" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Do You Have an Address? </h3>
+            <div class="fields">
+                <div class="field">
+                    <label id="labels-1">Street Address</label>
+                    <div id="streetAddress-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                        <input class="ui input" id="streetAddress" name="streetAddress" type="text"
+                            placeholder="Ex. 9999 Silva Rd.">
+                        <i class="map signs icon"></i>
+                    </div>
+                </div>
+                <div class="field">
+                    <label id="labels-1">City</label>
+                    <div id="city-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                        <input name="city" type="text" placeholder="Ex. Los Angeles">
+                        <i class="city icon"></i>
+                    </div style="margin-top: 2rem;">
+                </div>
+            </div>
+            <div class="fields">
+                <div class="field">
+                    <label id="labels-1">State</label>
+                    <div id="state-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                        <select id="state" name="state" class="ui search dropdown">
+                            <option value="">State</option>
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="DC">District Of Columbia</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
+                            <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="field">
+                    <label id="labels-1">Zip</label>
+                    <div id="zip-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                        <input name="zip" type="text" placeholder="Ex. 99999">
+                        <i class="hashtag icon"></i>
+                    </div style="margin-top: 2rem;">
+                </div>
+            </div>
+            <h3 class="form-h3">Store Hours</h3>
+            <div id="hours-div">
+                <div id='opening-hours-field' style="display: inline-block; width: 50%;" class="fields"></div>
+                <div id='closing-hours-field' style="display: inline-block; width: 50%; " class="fields"></div>
+            </div>
+            <div class="field">
+                <div class="ui toggle checkbox">
+                    <input type="checkbox" tabindex="0" name="24hours" class="hidden">
+                    <label>24 Hours</label>
+                </div>
+            </div>
+            <a id="submit2">
+                <div class="submit-button">Next <i class="right arrow icon"></i></div>
+            </a>
+            <p style="float: right;">Don't have an address? <a>Skip </a></p>
+        </form>
 
-    <script src="./js/listing.form.js"></script>
+        <!-- form 3 -->
+        <form id="form-3" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">This is your online presence</h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Website</label>
+                <div style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="website" type="text" placeholder="Ex. https://www.google.com">
+                    <i class="search icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Social Media</label>
+                <div id="instagram-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="instagram" type="text" placeholder="  Ex. https://www.instagram.com/john_smith">
+                    <i class="large instagram icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <div id="facebook-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="facebook" type="text" placeholder="  Ex. https://www.facebook.com/johnsmith">
+                    <i class="large facebook icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <div id="twitter-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="twitter" type="text" placeholder="  Ex. https://twitter.com/johnsmith">
+                    <i class="large twitter icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <div id="linkedIn-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="linkedin" type="text" placeholder="  Ex. https://www.google.com">
+                    <i class="large linkedin icon"></i>
+                </div>
+            </div>
+            <div id="submit3" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+
+        <!-- form 4 -->
+        <form id="form-4" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Lets Get Your Contact Info</h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Email</label>
+                <div id="email-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="email" type="text" placeholder="Ex. johnsmith@gmail.com">
+                    <i class="envelope icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Phone</label>
+                <div id="phone-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="phone" type="text" placeholder="Ex. 999-999-9999">
+                    <i class="phone icon"></i>
+                </div>
+            </div>
+            <div id="submit4" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+
+        <!-- form 5 -->
+        <form id="form-5" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Tell us about your business</h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Mission Statement</label>
+                <div id="ms-div" style="margin-top: 1rem;" class="ui left icon input">
+                    <textarea name="ms" type="text"
+                        placeholder="Ex. Patagonia: Build the best product, cause no unnecessary harm, use business to inspire and implement solutions to the environmental crisis."></textarea>
+                </div>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">About</label>
+                <div id="about-div" style="margin-top: 1rem;" class="ui left icon input">
+                    <textarea name="about" type="text" placeholder="Ex. The history, the story"></textarea>
+                </div>
+            </div>
+            <div id="submit5" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+
+        <!-- form 6 -->
+        <form id="form-6" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Images & Media</h3>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Images</label>
+                <button style="margin-top: 1rem;" class="ui button">Upload an image</button>
+            </div>
+            <div class="field">
+                <label style="margin-top: 2rem;" id="labels-1">Youtube</label>
+                <div id="youtube-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <input name="youtube" type="text" placeholder="Ex. https://www.youtube.com/">
+                    <i class="youtube icon"></i>
+                </div>
+            </div>
+            <div id="submit6" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+
+        <!-- form 7 -->
+        <form id="form-7" class="ui equal width form">
+            <h1 class="form-h1">International Authority Directory</h1>
+            <h3 class="form-h3">Frequently Asked Questions</h3>
+            <div id="faq-section">
+                <i id="add-faq" class="large plus circle icon"></i>
+                <div class="field" id="0faq" style="display: block;"><label>FAQ #1<label
+                            style="display: block;">Question:<input
+                                name="faq-question-0"></label><label>Answer:<textarea
+                                name="faq-answer-0"></textarea></label></label></div>
+            </div>
+            <div id="submit7" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </form>
+
+        <!-- footer  -->
+        <div id="footer" class="ui large breadcrumb">
+            <div id="businessTitle" class="section bread">Business Title</div>
+            <i class="right chevron icon divider"></i>
+            <div id="storefrontInfo" class="section bread">Storefront Info</div>
+            <i class="right chevron icon divider"></i>
+            <div id="website" class="section bread">Website + Social Media</div>
+            <i class="right chevron icon divider"></i>
+            <div id="contact" class="section bread">Contact</div>
+            <i class="right chevron icon divider"></i>
+            <div id="about" class="section bread">About your Business</div>
+            <i class="right chevron icon divider"></i>
+            <div id="images" class="section bread">Images & Media</div>
+            <i class="right chevron icon divider"></i>
+            <div id="faq" class="section bread">FAQs</div>
+        </div>
+    </div>
+    <script src="./js/form.pages.js"></script>
 </body>
 
 </html>
