--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -46,7 +46,7 @@
           <p id="nav-welcome" class="h2" style="margin-left: 1rem; color: white; margin-top: .5rem;" >Welcome, </p>
         </div>
         <div class="right menu">
-          <div class="submit-button">Logout</i></div>
+          <div id="logout-button" class="submit-button">Logout</i></div>
         </div>
       </div>
     </header>
