--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -118,7 +118,9 @@
               </div>
             </div>
           </div>
-          <div data-tab="listings" id="listings-div" class="ui right attached tab item tab-div"></div>
+          <div data-tab="listings" id="listings-div" class="ui right attached tab item tab-div">
+            <button id="add-listing-button" class="ui button">Make a listing</button>
+          </div>
             <div data-tab="billing" class="ui right attached tab item tab-div">
                 <p>billing</p>
             </div>
