crud and routingggg

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -46,6 +46,7 @@
           <p id="nav-welcome" class="h2" style="margin-left: 1rem; color: white; margin-top: .5rem;" >Welcome, </p>
         </div>
         <div class="right menu">
+            <div id="newListing" style="margin-right: 1rem;" class="submit-button">New Listing</i></div>
           <div id="logout-button" class="submit-button">Logout</i></div>
         </div>
       </div>
@@ -119,7 +120,7 @@
             </div>
           </div>
           <div data-tab="listings" id="listings-div" class="ui right attached tab item tab-div">
-            <button id="add-listing-button" class="ui button">Make a listing</button>
+            
           </div>
             <div data-tab="billing" class="ui right attached tab item tab-div">
                 <p>billing</p>
